k8s/mobilizacoes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mobilizacoes-service
  labels: { app.kubernetes.io/name: mobilizacoes-service, app.kubernetes.io/component: service, app.kubernetes.io/part-of: 4life }
spec:
  type: ClusterIP
  selector: { app.kubernetes.io/name: mobilizacoes-service }
  ports:
    - { name: http, port: 3003, targetPort: http }
